// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Reports Module Initial reducer state 1`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 1`] = `
Object {
  "meta": Object {
    "offline": Object {
      "commit": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_COMMIT",
      },
      "effect": Object {
        "url": "<API_URL_MOCK>/reports/default",
      },
      "rollback": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_ROLLBACK",
      },
    },
  },
  "type": "report/GET_DEFAULT_TEMPLATE_REQUEST",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 2`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": true,
  "templates": Object {},
}
`;
